add selecting list route
