# src/routes/job.ts
@@ -12,6 +12,7 @@ JobRoute.post('/:id/comment', CommentController.postComment)
 JobRoute.put('/:id/comment', CommentController.replyComment)
 JobRoute.put('/:id/accept', JobController.acceptJobByUser)
 JobRoute.get('/:id/users', JobController.getAllUserByJobId)
+JobRoute.get('/:id/selecting', JobController.getSelectingUserList)
 JobRoute.put('/:id/select', JobController.selectUserForJob)
 JobRoute.put('/:id/end/:user', JobController.confirmSuccessJob)
 JobRoute.post('/:id/apply', JobController.userApplyJob)
